--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -1,21 +1,5 @@
-.loguin-box {
-    background-color: #242424;
-    width: 600px;
-    height: 600px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: #fff;
-}
-.reg_box {
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
 input {
-    width: 500px;
+    width: 100%;
     height: 50px;
     border: 1px solid #4d4d4d;
     border-radius: 6px;
@@ -24,8 +8,17 @@ label {
     margin-top: 10px;
     font-size: 20px;
 }
+.login-align {
+    margin-bottom: 20px;
+}
+.center-align {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -65%);
+}
 .btn-reg {
-    background-color: #6351ff;
+    background-color: #ff5656;
     margin-top: 25px;
     width: 150px;
     height: 60px;
@@ -35,7 +28,8 @@ label {
     color: #fff;
     align-self: center;
     transition-duration: 0.6s;
+    font-size: 20px;
 }
 .btn-reg:hover {
-    background-color: #4c39fa;
+    background-color: #fa3939;
 }
