--- a/public/assets/css/register.css
+++ b/public/assets/css/register.css
@@ -2,8 +2,23 @@ label {
     margin-top: 10px;
     font-size: 20px;
 }
+input {
+    width: 100%;
+    height: 50px;
+    border: 1px solid #4d4d4d;
+    border-radius: 6px;
+}
+.register-align {
+    margin-bottom: 20px;
+}
+.center-align {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -60%);
+}
 .btn-reg {
-    background-color: #6351ff;
+    background-color: #ff5656;
     margin-top: 25px;
     width: 150px;
     height: 60px;
@@ -13,7 +28,8 @@ label {
     color: #fff;
     align-self: center;
     transition-duration: 0.6s;
+    font-size: 20px;
 }
 .btn-reg:hover {
-    background-color: #4c39fa;
+    background-color: #fa3939;
 }
