--- a/public/assets/css/agents.css
+++ b/public/assets/css/agents.css
@@ -13,7 +13,6 @@ label {
     transition: 0.4s;
     text-decoration: none;
     color: #000;
-    margin-right: -12px;
 }
 .btn-new:hover {
     background-color: #1cff54;
@@ -31,9 +30,6 @@ label {
 }
 .tofix {
     margin-top: 48px;
-}
-.teste {
-    margin-left: 20px;
 }
 .life {
     color: rgb(255, 12, 12);
@@ -189,19 +185,26 @@ i{
     font-weight: 400;
     line-height: 1.5;
     color: #fff;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
     background-color: #111111;
     background-clip: padding-box;
     border: 0px solid;
     border-bottom: 1px solid #fff;
     border-radius: 2px;
-    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
     margin-top: 5px;
     margin-bottom: 5px;
     outline: none !important;
     box-shadow: none;
+}
+.input_atk-top {
+    border-radius: 6px;
+}
+.input_sel {
+    background: url("data:image/svg+xml,<svg height='10px' width='10px' viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'><path d='M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z'/></svg>") no-repeat #111111;
+    background-position: calc(100% - 0.75rem) center !important;
+    -moz-appearance:none !important;
+    -webkit-appearance: none !important;
+    appearance: none !important;
+    padding-right: 2rem !important;
 }
 .box-icon {
     font-size: 20px;
@@ -218,17 +221,26 @@ i{
 }
 .discard-b {
     text-decoration: none;
-    background-color: #212429;
+    background-color: #0a0101;
 }
 .marg {
     margin-bottom: 10px;
 }
 .cards {
-    padding: 0%;
     font-size: 15px;
     cursor: pointer;
     border: 1px solid #111111;
 }
 .custom-link {
     color: #ff5656;
+}
+@media(max-width:1400px){
+    .base-labels{
+       display:none;
+     }
+}
+@media(min-width:1400px){
+    .altered-labels{
+       display:none;
+     }
 }
